public_html/Styles/lifestriders.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Oct 6, 2016, 3:39:46 PM
    Author     : Matthew_2
*/
body{
    background-color: #EDE4BD;
}
#wrapperOverall {
    background-color: #EDE4BD;
}
#printPreviewConsultingForm{
    background-color: #fff;
    
    -webkit-print-color-adjust: exact;
}
#printPreviewPhysicianForm{
    background-color: #fff;
    
    -webkit-print-color-adjust: exact;
}
#printPreviewVolunteerForm{
    background-color: #fff;
    
    -webkit-print-color-adjust: exact;
}
#printPreviewConsultingFormOVER, #formConsultingForm{
    background-color: #fff;
 
}
#printPreviewPhysicianFormOVER, #formPhysicianForm{
    background-color: #fff;
 
}
#printPreviewVolunteerFormOVER, #formVolunteerForm{
    background-color: #fff;
 
}

#printButton{
    margin-top: -2px;
    margin-left: 25px;
    margin-bottom: 25px;
}
.wrapperOverall{
    background-color: #EDE4BD;
}
.theWrapper{
       margin-top: 20px;
}
.box {
  border: 1px solid black ;
  width: 10px;
  padding: 5px;
  display:inline-block;
}
.field{
     padding: 20px;
     display:inline-block;
     /*line-height: 0.8;*/
}

